{{$NEXT}}

0.8.13  2025-01-19T09:16:13+13:00
  - Provide fix find-font() method and provide it as an export sub #42

0.8.12  2024-12-22T07:40:11+13:00
  - Support indexing, to select individual fonts from FreeType
    and OpenType font collections.

0.8.11  2024-12-15T08:17:01+13:00
  - Fix handling of unmapped characters Identity-H encoding
  - Fix mis-classification of OpenType collections as non-CID fonts.

0.8.10  2024-12-07T08:25:26+13:00
  - Add file attribute to font objects.

0.8.9  2024-11-04T08:54:13+13:00
   - Add can-subset() method.

0.8.8  2024-10-16T07:26:50+13:00
   - Fix handling of CID-keyed CFF fonts

0.8.7  2024-08-09T05:32:42+12:00
   - Removed shaping support to PDF::Font::Loader::HarfBuzz. This module
     must be loaded to enable full shaping.

0.8.6  2024-08-03T09:13:48+12:00
   - Added more shaping tests.
   - Fixed output of zero width glyphs in CID fonts (for Arabic
     shaping test)

0.8.5  2024-07-29T07:21:53+12:00
   - Fix ToUnicode CMAP generation for ligature entries.

0.8.4  2024-07-28T10:30:37+12:00
   - Bug fixes to shaping. Make correct use of x/y advance and offset in
     shaping metrics.

0.8.3  2024-04-11T06:22:45+12:00
    - Fix potential embedding of *.ttc (True Type collection) fonts. They
      are not directly recognised as valid PDF font program and need to be
      processed by HarfBuzz::Subset.

0.8.2  2024-02-27T08:40:06+13:00
    - Add shape(:!kern) option. I.e shaping with horizontal kerning disabled.

0.8.1  2024-01-23T07:43:00+13:00
    - Set shaping direction from left-to-right

0.8.0  2024-01-22T06:22:19+13:00
   - Add auto-loading of type-1 AFM metrics. Look for a
     sibling *.afm file when loading type-1 *.pfa or *.pfb
     files and attach it.
   - Add shape() method:
     -- integrate HarfBuzz for TrueType and OpenType shaping
     -- fallback to kerning + typographic ligature substitution
        for other fonts
     -- Add allocate-cid() and encode-cids() method to encoders.